syntax = "proto3";

import "google/protobuf/empty.proto";
option go_package = ".;proto";

//定义user提供的gRPC服务接口,应该考虑通用性,不应该与具体的业务深度绑定
service User{
  rpc GetUserList(PageInfo)returns(UserListResponse); //用户列表,传入分页信息,返回用户列表
  rpc GetUserByMobile(MobileRequest)returns(UserInfoResponse);//通过电话查询单个用户
  rpc GetUserById(IdRequest)returns(UserInfoResponse);//通过id查用户

  rpc CreateUser(CreateUserInfo)returns(UserInfoResponse);//创建用户
  rpc UpdateUser(UpdateUserInfo)returns(google.protobuf.Empty);//修改用户信息,返回是否成功,用Empty站位
  rpc CheckPassWord(CheckPasswordInfo)returns(ChecResponse); //验证密码的接口,传回结构体的原因是利于扩展

}


message PageInfo{
  uint32 pn = 1; //页码
  uint32 pSize = 2; //每一页的大小
}

message MobileRequest{
  string mobile = 1;
}
message IdRequest{
  int32 id = 1;
}

message UserInfoResponse{//单个用户应该要返回的信息
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 birthDay = 5;
  string gender = 6;
  int32 role = 7;
}

message UserListResponse{
  int32 total = 1; //总数
  repeated UserInfoResponse data = 2; //[]UserInfoResponse
}


message CreateUserInfo{//创建用户所需的信息(底层信息定义要通用,不要和业务绑定)
  string nickName = 1;
  string password = 2;
  string mobile = 3;
}

message UpdateUserInfo{
  int32 id = 1;
  string nickName = 2;
  string gender = 3;
  uint64 birthday = 4;
}

message CheckPasswordInfo{
  string password = 1;
  string encryptedPassword = 2;
}

message  ChecResponse{
  bool success = 1;//是否成功
}